--- a/client/app/checkout/success/success.jade
+++ b/client/app/checkout/success/success.jade
@@ -22,14 +22,19 @@ navbar
 							th.col-lg-1.col-md-3.col-sm-3.col-xs-3.text-center 總價
 						tr(ng-repeat="product in order.products")
 							td 
-								a(ng-href="{{product.href}}") {{product.name}}
+								a.text-center(ng-href="{{product.href}}") {{product.name}}
 								em.small(ng-repeat="option in product.options")
 									br
 									| {{option.name}},{{option.value}}
-							td {{product.quantity}}
-							td {{product.total}}
+							td.text-center {{product.quantity}}
+							td.text-center {{product.total}}
 					em.pull-right ({{order.payment_method}} , {{order.shipping_method}})
-
+			.row
+				.col-md-4.col-md-offset-8.col-xs-12
+					table.table
+						tr(ng-repeat="order_total in order_totals")
+							td.text-right {{order_total.title}}:
+							td.text-right $ {{order_total.value}}
 			.page-header.h4 商品處理資訊
 			.row
 				div.col-md-4
